--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jstransformer-handlebars": "^1.1.0",
     "metalsmith": "^2.3.0",
     "metalsmith-assets": "^0.1.0",
+    "metalsmith-if": "^0.1.1",
     "metalsmith-ignore": "^1.0.0",
     "metalsmith-layouts": "^2.3.1",
     "metalsmith-markdown": "^1.3.0",
